add_subdirectory(001_buffer_full)
add_subdirectory(002_tail_wrap)
add_subdirectory(003_head_wrap)
add_subdirectory(004_api_at)
add_subdirectory(005_api_brackets)
add_subdirectory(006_api_copy_constructor)
add_subdirectory(007_api_move_constructor)
add_subdirectory(008_api_copy_assignment)
add_subdirectory(009_api_move_assignment)
add_subdirectory(010_api_front)
add_subdirectory(011_api_back)
add_subdirectory(012_api_empty)
add_subdirectory(013_api_size)
add_subdirectory(014_api_clear)
add_subdirectory(015_api_push_rvalue)
add_subdirectory(016_api_full)
add_subdirectory(017_api_emplace_back)
add_subdirectory(018_pop_front)
add_subdirectory(019_api_swap)
add_subdirectory(020_api_iterator)
add_subdirectory(021_api_const_iterator)
add_subdirectory(022_api_reverse_iterator)
add_subdirectory(023_api_const_reverse_iterator)